# EternalR

./: Cargo.toml  README.md
ast/: Cargo.toml  externs.cbor
ast/src/: der.rs  externs_file.rs  lib.rs  types.rs
ast/tests/: corefn.json  corefn2.json  dataord.json
compiler/: Cargo.toml  debug.txt
compiler/src/: compiler.rs  errors.rs  grabtypes.rs  lib.rs  translate.rs  translate2.rs  utils.rs
compiler/tests/: First.purs  debug.txt
cst/: Cargo.toml
cst/src/: errors.rs  hime_lex.rs  layout.rs  lex.rs  lex_string.rs  lib.rs  positions.rs  tests.rs  types.rs
cst/src/hime/: consts.rs  hime_lex.rs  mod.rs  purs.gram
cst/tests/: main.purs
hime/: .gitignore
hime/src/: ast.rs  result.rs
hime/src/parsers/: lrk.rs
src/: lib.rs
src/prim/: int.rs  mod.rs
tests/: First.js  First.purs  debug.txt
tests/First/: spago.dhall
tests/First/src/: Main.purs
