[package]
name = "EternalR"
version = "0.1.0"
authors = ["yangdao <=>"]
edition = "2018"


[dependencies]
#gluon_vm = "0.17.1"
er_compiler = {path = "compiler"}
ast = {path = "ast"}
futures = "0.3.5"
serde_json = "1.0.57"
#gluon_parser = "0.17.1"
#gluon_base = "0.17.1"
gluon = {path = "../gluon", version = "0.17.1",features = ["serialization"]}