[package]
name = "compiler"
version = "0.1.0"
authors = ["yangdao <=>"]
edition = "2018"


[dependencies]
gluon_vm = "0.17.1"
gluon_parser = "0.17.1"
gluon_base = "0.17.1"
gluon = "0.17.1"
ast = {path = "../ast"}
serde_json = "1.0.57"
ordered-float = "2.0.0"
log = "0.4.11"
env_logger = "0.7"
futures = "0.3.5"
collect-mac = "0.1.0"
typed-arena = "2"